# tiny_render_se

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: implementation_plan.md
docs/phase0/: phase0_2_framebuffer.md  phase0_3_timer.md
src/: Application.cpp  Application.h  main.cpp
src/rasterizer/: Color.h  Framebuffer.cpp  Framebuffer.h
src/utils/: Timer.h
tests/: CMakeLists.txt  test_framebuffer.cpp
